# Morganic

./: .gitignore  PROBLEMS.md  README.md  SPEC.md  TODO.md  __main__.py  arithmetic.py  cli.py  errors.py  example_script.elemens  parser.py  pyproject.toml  scicons.morgan  script.elemens  splitter.py  state.py
.github/workflows/: ci.yml
asm-x64/: Makefile  README.md  main.asm
compiler/: Cargo.toml  README.md
compiler/src/: main.rs
example programs/: cli_unit_converter.elemens  graphing_quadratic.elemens  graphing_wave_showcase.elemens  input_cli_calculator.elemens  maze_adventure_game.elemens  program_pack_index.elemens  scoreboard_manager.elemens  space_battle_sim.elemens  tactical_grid_game.elemens
node/: README.md  package-lock.json  package.json
node/src/: arithmetic.js  cli.js  parser.js  splitter.js  state.js
node/tests/: runtime.test.js
python/morganic/: arithmetic.py  cli.py  errors.py  parser.py  parser_graph.py  splitter.py  state.py
python/tests/: conftest.py  test_cli.py  test_cross_runtime_conformance.py  test_examples.py  test_parser.py  test_splitter.py
rust/: Cargo.toml  README.md
rust/src/: arithmetic.rs  errors.rs  lib.rs  main.rs  parser.rs  splitter.rs  state.rs
rust/tests/: interpreter_tests.rs
tests/: conftest.py  test_arithmetic.py  test_parser.py  test_splitter.py
website/: app.js  benchmark-data.json  index.html  styles.css
